# mileage

./: .travis.yml  Cargo.toml  README.md  codecov.yml
benches/: range_iter.rs  range_par_iter.rs
criterion/chariter/actual/base/: sample.json
criterion/chariter/actual/change/: estimates.json
criterion/chariter/actual/new/: benchmark.json  estimates.json  raw.csv  tukey.json
criterion/chariter/actual/report/: index.html
criterion/chariter/chain_segments ([closure])/base/: sample.json
criterion/chariter/chain_segments ([closure])/change/: estimates.json
criterion/chariter/chain_segments ([closure])/new/: benchmark.json  estimates.json  raw.csv  tukey.json
criterion/chariter/chain_segments ([closure])/report/: index.html
criterion/chariter/chain_segments (fn())/change/: estimates.json
criterion/chariter/chain_segments (fn())/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion/chariter/chain_segments (fn())/report/: index.html
criterion/chariter/custom/base/: tukey.json
criterion/chariter/custom/change/: estimates.json
criterion/chariter/custom/new/: benchmark.json  estimates.json  raw.csv  sample.json
criterion/chariter/custom/report/: index.html
criterion/chariter/report/: index.html
criterion/chariter/try_from ([closure])/base/: estimates.json
criterion/chariter/try_from ([closure])/change/: estimates.json
criterion/chariter/try_from ([closure])/new/: benchmark.json  raw.csv  sample.json  tukey.json
criterion/chariter/try_from ([closure])/report/: index.html
criterion/chariter/try_from (fn())/base/: estimates.json  raw.csv  sample.json  tukey.json
criterion/chariter/try_from (fn())/change/: estimates.json
criterion/chariter/try_from (fn())/new/: benchmark.json
criterion/chariter/try_from (fn())/report/: index.html
criterion/charpariter/actual/base/: benchmark.json
criterion/charpariter/actual/change/: estimates.json
criterion/charpariter/actual/new/: estimates.json  raw.csv  sample.json  tukey.json
criterion/charpariter/actual/report/: index.html
criterion/charpariter/chain_segments ([closure])/base/: benchmark.json  raw.csv  sample.json  tukey.json
criterion/charpariter/chain_segments ([closure])/change/: estimates.json
criterion/charpariter/chain_segments ([closure])/new/: estimates.json
criterion/charpariter/chain_segments ([closure])/report/: index.html
criterion/charpariter/chain_segments (fn())/base/: sample.json  tukey.json
criterion/charpariter/chain_segments (fn())/change/: estimates.json
criterion/charpariter/chain_segments (fn())/new/: benchmark.json  estimates.json  raw.csv
criterion/charpariter/chain_segments (fn())/report/: index.html
criterion/charpariter/decompress ([closure])/base/: estimates.json  raw.csv  tukey.json
criterion/charpariter/decompress ([closure])/change/: estimates.json
criterion/charpariter/report/: index.html
criterion/report/: index.html
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/char_range/: all.html  index.html
doc/char_range/range/: index.html  sidebar-items.js  struct.CharRange.html  struct.Iter.html  struct.ParIter.html
doc/src/char_range/: lib.rs.html
src/: lib.rs
src/map/: iter.rs  mod.rs
src/range/: iter.rs  mod.rs  par_iter.rs
src/set/: iter.rs  mod.rs  owned.rs  par_iter.rs
src/trie/: mod.rs
(+46 files in other folders)
