[package]
name = "mileage"
version = "0.1.0"
edition = "2018"

authors = ["Christopher Durham (aka CAD97) <cad97@cad97.com>"]
description = "Enjoy the efficient char range!"
repository = "https://github.com/CAD97/mileage"
readme = "./README.md"
keywords = []
categories = []
license = "MIT"

maintenance = { status = "passively-maintained" }

[features]
default = []

set = []
trie = []
map = []

owned-set = ["alloc"]

new-trie = ["std","bitvec","indexmap","itertools","proc-macro2","quote"]

par-iter = ["rayon", "alloc"]

# These features are implementation details
alloc = []
std = ["alloc"]

[dependencies]
bitvec = { version = "0.14.0", optional = true }
indexmap = { version = "1.0.2", optional = true }
itertools = { version = "0.8.0", optional = true, default-features = false }
proc-macro2 = { version = "1.0.1", optional = true }
quote = { version = "1.0.2", optional = true }
rayon = { version = "1.1.0", optional = true }

[[bench]]
name = "range_par_iter"
harness = false
required-features = ["par-iter"]

[[bench]]
name = "range_iter"
harness = false

[dev-dependencies]
criterion = "0.2.11"

[package.metadata.docs.rs]
all-features = true
