[package]
name = "mileage"
version = "0.1.0"
edition = "2018"

description = "deprecated char collections"
repository = "https://github.com/CAD97/mileage"
keywords = ["char", "range", "set", "trie", "map"]
categories = ["data-structures", "development-tools::procedural-macro-helpers"]
license = "MIT"

maintenance = { status = "deprecated" }

[features]
default = []

set = []
trie = []
map = []

owned-set = ["alloc"]

new-trie = ["std", "bitvec", "indexmap", "itertools", "proc-macro2", "quote"]

par-iter = ["rayon", "alloc"]

# These features are implementation details
alloc = []
std = ["alloc"]

[dependencies]
bitvec = { version = "1.0.1", optional = true }
indexmap = { version = "2.0.0", optional = true }
itertools = { version = "0.11.0", optional = true }
proc-macro2 = { version = "1.0.67", optional = true }
quote = { version = "1.0.33", optional = true }
rayon = { version = "1.7.0", optional = true }

[[bench]]
name = "range_par_iter"
harness = false
required-features = ["par-iter"]

[[bench]]
name = "range_iter"
harness = false

[dev-dependencies]
criterion = "0.5.1"

[package.metadata.docs.rs]
all-features = true
